# file-vault

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_auth_columns.py  0003_add_upload_status_to_files.py  0004_add_verification_tokens.py  0005_add_full_name_to_users.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  exceptions.py  password_blocklist.py  rate_limit.py  security.py
backend/app/models/: __init__.py  file.py  mixins.py  plan.py  token.py  user.py
backend/app/routers/: auth.py  files.py
backend/app/schemas/: auth.py  files.py
backend/app/services/: auth_service.py  email_service.py  quota_service.py  storage_service.py  token_service.py
backend/scripts/: reconcile_quota.py  seed_plans.py
backend/tests/: conftest.py  test_auth.py  test_email_features.py  test_files.py
frontend/: .env.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/auth/: layout.tsx
frontend/app/forgot-password/: layout.tsx  page.tsx
frontend/app/login/: layout.tsx  page.tsx
frontend/app/register/: layout.tsx  page.tsx
frontend/app/reset-password/: page.tsx
frontend/components/: theme-toggle.tsx
frontend/components/auth/: auth-card.tsx
frontend/components/brand/: logo.tsx
frontend/components/dashboard/: verification-banner.tsx
frontend/components/files/: empty-state.tsx  file-list.tsx  file-manager.tsx  file-preview.tsx  file-row.tsx  upload-zone.tsx  usage-bar.tsx
frontend/components/layout/: footer.tsx  header-background.tsx  header-logo.tsx  header-logout-button.tsx  header-user-menu.tsx  (+1 more)
frontend/lib/: api.ts  auth-server.ts  auth.ts  files.ts  format.ts
(+11 files in other folders)
