[project]
name = "file-vault-api"
version = "0.1.0"
description = "File Vault API — Phase 1 Foundation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv]
# Lock file is committed; use `uv sync --frozen` in CI/Docker.
# Run `uv lock` locally after changing dependencies.
# This project has no build backend — uv sync installs only the declared
# dependencies (not the project itself), so `app/` is importable via the
# working directory rather than as an installed package.
